--- a/Pages/styles/politicstyle.css
+++ b/Pages/styles/politicstyle.css
@@ -147,6 +147,7 @@ footer {
     .headerInfo, .InfoPolitica {
         font-size: large;
         padding: 10px;
+        background-color: 100%;
     }
 
     .InfoContact ul {
