--- a/Pages/styles/politicstyle.css
+++ b/Pages/styles/politicstyle.css
@@ -132,6 +132,7 @@ footer {
 @media (max-width: 768px) {
     .head h1 {
         font-size: large;
+        background-color: rebeccapurple;
     }
 
     .Icon img {
@@ -173,6 +174,7 @@ footer {
 
     .InfoPolitica {
         font-size: medium;
+        
         padding: 10px;
         border-bottom: none;
     }
