--- a/Pages/styles/politicstyle.css
+++ b/Pages/styles/politicstyle.css
@@ -90,11 +90,11 @@ body {
 }
 
 .btnBack:hover {
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(179, 235, 179);
 }
 
 .InfoPolitica {
-    background-color: #cbf0c1;
+    background-color: #000000;
     text-align: center;
     font-size: x-large;
     display: flex;
