--- a/Pages/styles/politicstyle.css
+++ b/Pages/styles/politicstyle.css
@@ -94,7 +94,7 @@ body {
 }
 
 .InfoPolitica {
-    background-color: #000000;
+    background-color: #cbf0c1;
     text-align: center;
     font-size: x-large;
     display: flex;
