--- a/style.css
+++ b/style.css
@@ -166,9 +166,15 @@ header nav{
     padding-top: 50px;
     padding-left: 50px;
     justify-content: center;
+    opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 0.6s ease, transform 0.6s ease;
 
 }
-
+.articulos.visible{
+    opacity: 1;
+    transform: translateY(0);
+}
 .articulos img{
 
     width: 250px;
