--- a/Pages/styles/politicstyle.css
+++ b/Pages/styles/politicstyle.css
@@ -39,6 +39,13 @@ body {
     padding-bottom: 15px;
     transition: all ease-in 0.25s;
 }
+.whatsapp-button {
+    width: 25px;
+    height: 25px;
+    padding-bottom: 15px;
+    transition: all ease-in 0.25s;
+}
+
 
 .socials {
     display: flex;
