--- a/Pages/styles/politicstyle.css
+++ b/Pages/styles/politicstyle.css
@@ -16,6 +16,7 @@ body {
     align-items: center;
     justify-content: flex-start;
     flex-wrap: wrap;
+    border: none;
 }
 
 .InfoContact li {
