--- a/style.css
+++ b/style.css
@@ -204,7 +204,19 @@ header nav{
 
 }
 .whatsapp-btn{
-     display: inline-block;
+    margin-top: 10px;
+    cursor: pointer;
+    text-align: center;
+    background-color: white;
+    font-size: 16px;
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+
+}
+.whatsapp-btn2{
+    display: inline-block;
     padding: 10px 20px;
     margin-top: 10px;
     background-color: #25D366; /* Color de WhatsApp */
@@ -217,7 +229,6 @@ header nav{
     text-align: center;
     transition: background-color 0.3s ease;
     width: 80%; /* Ajusta el ancho del botón si es necesario */
-
 }
 
 
