--- a/Pages/styles/politicstyle.css
+++ b/Pages/styles/politicstyle.css
@@ -150,12 +150,13 @@ body {
     border-bottom: 1px solid black;
 }
 
-footer {
-    padding-top: 25%;
-    background-color: rgb(255, 255, 255);
-    color: rgb(0, 0, 0);
-    height: 150px;
+footer{
+    color: rgb(0, 0, 0); /* Color del texto */
     text-align: center;
+    padding: 20px;
+    position: relative;
+    bottom: 0;
+    width: 100%;
 }
 
 /* Media Queries for Mobile */
