--- a/style.css
+++ b/style.css
@@ -344,11 +344,11 @@ footer{
     flex-direction: column;
     padding: 35%;
     font-size: xx-large;
-    color: rgb(2, 41, 126);
+    color: rgb(0, 0, 0);
 }
 #costo span{
-    border-right: 5px solid yellow;
-    border-bottom: 2px solid yellow;
+    border-right: 2px solid rgb(17, 64, 117);
+    border-bottom: 5px solid rgb(17, 64, 117);
 }
 
 
