--- a/style.css
+++ b/style.css
@@ -347,8 +347,8 @@ footer{
     color: rgb(0, 0, 0);
 }
 #costo span{
-    border-right: 2px solid rgb(17, 64, 117);
-    border-bottom: 5px solid rgb(17, 64, 117);
+    border-right: 2px solid yellow;
+    border-bottom: 5px solid yellow;
 }
 
 
